third_party/move/move-compiler/tests/move_check/typing/break_constant.move
module 0x8675309::M {
    struct Coin {}
    const C : u64 = break;

    fun t0() {
	3 + C;
    }
}
